Update documentation and minor code cleanup
Revised CLAUDE.md for clarity, conciseness, and updated build/run instructions. In JManager.java, removed unnecessary 'this' references for consistency in setter methods.